nextcloud/network-policy-nextcloud-allow-ingress-to-collabora-from-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-allow-ingress-to-collabora-from-traefik
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: collabora
      app.kubernetes.io/name: collabora-online
      type: main
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9980
